--- a/grafico.ipynb
+++ b/grafico.ipynb
@@ -403,6 +403,43 @@
     "plt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Grafico 10\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# Dados para o gráfico de barras empilhadas horizontal\n",
+    "categorias = ['Categoria A', 'Categoria B', 'Categoria C', 'Categoria D']\n",
+    "valores1 = [4, 7, 2, 5]\n",
+    "valores2 = [2, 5, 3, 8]\n",
+    "\n",
+    "# Criar o gráfico de barras empilhadas horizontal\n",
+    "fig, ax = plt.subplots()\n",
+    "ax.barh(categorias, valores1, color='blue', label='Série 1')\n",
+    "ax.barh(categorias, valores2, color='orange', left=valores1, label='Série 2')\n",
+    "\n",
+    "# Adicionar rótulos aos eixos\n",
+    "ax.set_xlabel('Valores')\n",
+    "ax.set_ylabel('Categorias')\n",
+    "\n",
+    "# Adicionar um título ao gráfico\n",
+    "ax.set_title('Gráfico de Barras Empilhadas Horizontal')\n",
+    "\n",
+    "# Adicionar uma legenda\n",
+    "ax.legend()\n",
+    "\n",
+    "# Exibir o gráfico\n",
+    "plt.show()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
