--- a/grafico.ipynb
+++ b/grafico.ipynb
@@ -1160,6 +1160,84 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import tkinter as tk\n",
+    "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
+    "\n",
+    "# Função para atualizar o gráfico com base nos dados inseridos pelo usuário\n",
+    "def atualizar_grafico():\n",
+    "    notas_usuario = []\n",
+    "    \n",
+    "    for entry in entries:\n",
+    "        nota_texto = entry.get()\n",
+    "        \n",
+    "        # Verificar se a entrada é válida\n",
+    "        if nota_texto.strip():  # Verificar se a string não está vazia\n",
+    "            nota = float(nota_texto.replace(',', '.'))  # Aceitar vírgula ou ponto como separador decimal\n",
+    "            notas_usuario.append(nota)\n",
+    "        else:\n",
+    "            # Tratar caso a entrada seja vazia\n",
+    "            notas_usuario.append(0)\n",
+    "\n",
+    "    x = list(range(1, 9))\n",
+    "    y = notas_usuario\n",
+    "\n",
+    "    # Limpar o conteúdo antigo do gráfico\n",
+    "    for widget in frame_grafico.winfo_children():\n",
+    "        widget.destroy()\n",
+    "\n",
+    "    # Criar e exibir o novo gráfico\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.plot(x, y, marker='o')\n",
+    "    ax.set_title('Notas de Matemática')\n",
+    "    ax.set_xlabel('Provas')\n",
+    "    ax.set_ylabel('Notas')\n",
+    "\n",
+    "    canvas = FigureCanvasTkAgg(fig, master=frame_grafico)\n",
+    "    canvas.draw()\n",
+    "    canvas.get_tk_widget().pack(side=tk.TOP, fill=tk.BOTH, expand=1)\n",
+    "\n",
+    "# Criar a janela principal\n",
+    "root = tk.Tk()\n",
+    "root.title(\"Visualização de Notas\")\n",
+    "\n",
+    "# Entradas para as notas\n",
+    "entries = []\n",
+    "for i in range(8):\n",
+    "    label = tk.Label(root, text=f\"Nota Prova {i+1}:\")\n",
+    "    label.pack()\n",
+    "    entry = tk.Entry(root)\n",
+    "    entry.pack()\n",
+    "    entries.append(entry)\n",
+    "\n",
+    "# Botão para atualizar o gráfico\n",
+    "btn_atualizar = tk.Button(root, text=\"Atualizar Gráfico\", command=atualizar_grafico)\n",
+    "btn_atualizar.pack(pady=10)\n",
+    "\n",
+    "# Frame para o gráfico\n",
+    "frame_grafico = tk.Frame(root)\n",
+    "frame_grafico.pack()\n",
+    "\n",
+    "# Inicializar o gráfico\n",
+    "atualizar_grafico()\n",
+    "\n",
+    "# Iniciar o loop principal da interface gráfica\n",
+    "root.mainloop()\n"
+   ]
   }
  ],
  "metadata": {
