--- a/grafico.ipynb
+++ b/grafico.ipynb
@@ -1174,6 +1174,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Grafico 23\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import tkinter as tk\n",
     "from matplotlib.backends.backend_tkagg import FigureCanvasTkAgg\n",
